# meshnet-agent

./: .gitignore  README.md  pyproject.toml
agent/: pyproject.toml
agent/src/meshnet_agent/: __init__.py  benchmark.py  config.py  downloads.py  hardware.py  heartbeat.py  llamacpp.py  logbuffer.py  main.py  platform_assets.py  roles.py  tailscale.py  worker.py
shared/: pyproject.toml
shared/src/meshnet_shared/: __init__.py  constants.py  schemas.py
