[project]
name = "meshnet-agent"
version = "0.0.0"
description = "Agente MeshNet: CLI que gestiona llama.cpp local y reporta al coordinador"
requires-python = ">=3.11"
dependencies = [
    "meshnet-shared",
    "typer>=0.12",
    "httpx>=0.27",
    "psutil>=5.9",
    "platformdirs>=4.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.0"]

[project.scripts]
meshnet-agent = "meshnet_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshnet_agent"]
