[project]
name = "meshnet-shared"
version = "0.0.0"
description = "Contratos compartidos agente↔coordinador (schemas Pydantic y constantes)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshnet_shared"]
